--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             
             
           </span>
-                <h4 class="u-align-center u-text u-text-6">!</h4>
+                <h4 class="u-align-center u-text u-text-6">(More to Come)</h4>
               </div>
             </div>
           </div>
