--- a/index.html
+++ b/index.html
@@ -173,12 +173,13 @@
                         </div>
                     </div>
                     <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-20 u-white u-layout-cell-3">
-                        <div class="u-container-layout u-valign-top u-container-layout-3"><span class="u-border-3 u-border-grey-15 u-icon u-icon-circle u-spacing-20 u-text-grey-40 u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 384 384" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-7de2"></use></svg><svg class="u-svg-content" viewBox="0 0 384 384" x="0px" y="0px" id="svg-7de2" style="enable-background:new 0 0 384 384;"><g><g><path d="M353.188,252.052c-23.51,0-46.594-3.677-68.469-10.906c-10.906-3.719-23.323-0.833-30.438,6.417l-43.177,32.594    c-50.073-26.729-80.917-57.563-107.281-107.26l31.635-42.052c8.219-8.208,11.167-20.198,7.635-31.448    c-7.26-21.99-10.948-45.063-10.948-68.583C132.146,13.823,118.323,0,101.333,0H30.812C13.823,0,0,13.823,0,30.812    C0,225.563,158.438,384,353.188,384c16.99,0,30.813-13.823,30.813-30.813v-70.323C384,265.875,370.177,252.052,353.188,252.052z     M362.667,353.188c0,5.229-4.25,9.479-9.479,9.479c-182.99,0-331.854-148.865-331.854-331.854c0-5.229,4.25-9.479,9.479-9.479    h70.521c5.229,0,9.479,4.25,9.479,9.479c0,25.802,4.052,51.125,11.979,75.115c1.104,3.542,0.208,7.208-3.375,10.938L82.75,165.427    c-2.458,3.26-2.844,7.625-1,11.26c29.927,58.823,66.292,95.188,125.531,125.542c3.604,1.885,8.021,1.49,11.292-0.979    l49.677-37.635c2.51-2.51,6.271-3.406,9.667-2.25c24.156,7.979,49.479,12.021,75.271,12.021c5.229,0,9.479,4.25,9.479,9.479    V353.188z"></path>
-</g>
-</g></svg></span>
-                      <h5 class="u-text u-text-custom-color-1 u-text-6">Call me:</h5>
-                      <p class="u-text u-text-grey-50 u-text-7">1 (443) 822-5015</p>
-                    </div>
+                        <div class="u-container-layout u-valign-top u-container-layout-3">
+                            <span class="u-border-3 u-border-grey-15 u-file-icon u-icon u-icon-circle u-spacing-20 u-text-grey-75 u-icon-1"><img src="images/leetcode-3445700-2878632.png" alt=""></span>
+                            <h5 class="u-text u-text-custom-color-1 u-text-6">LeetCode:</h5>
+                            <p class="u-text u-text-grey-50 u-text-4 u-text-color-">
+                                <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-50 u-btn-1" href="https://www.leetcode.com/tiagofdev">tiagofdev</a>
+                            </p>
+                       </div>
                   </div>
                 </div>
               </div>
