--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
     </section>
     <section class="u-align-center u-clearfix u-palette-3-base u-section-6" id="carousel_7a8d">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-text u-text-1">Get in Touch!<br>
+        <h1 class="u-text u-text-1">More!<br>
         </h1>
-        <p class="u-text u-text-2">Contact</p>
+        <p class="u-text u-text-2"></p>
         <div class="u-clearfix u-gutter-30 u-layout-wrap u-layout-wrap-1">
           <div class="u-gutter-0 u-layout">
             <div class="u-layout-col">
@@ -160,7 +160,7 @@
                     <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-20 u-white u-layout-cell-1">
                         <div class="u-container-layout u-valign-top u-container-layout-1">
                             <span class="u-border-3 u-border-grey-15 u-file-icon u-icon u-icon-circle u-spacing-20 u-text-grey-75 u-icon-1"><img src="images/1236849.png" alt=""></span>
-                            <h5 class="u-text u-text-custom-color-1 u-text-3">LinkedIn:</h5>
+                            <h5 class="u-text u-text-custom-color-1 u-text-3">LinkedIn Profile:</h5>
                             <p class="u-text u-text-grey-50 u-text-4 u-text-color-">
                                 <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-50 u-btn-1" href="https://www.linkedin.com/in/tiagofdev">tiagofdev</a>
                             </p>
