--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-2">
-                <p class="u-text u-text-2">Hi, I'm Tiago, recent graduate, passionate about technology, excited to debut in this awesome Software Industry.<br>I created this portfolio thanks to the Google engine search and the amazing community at StatckOverflow.
+                <p class="u-text u-text-2">Hi, I'm Tiago, a recent graduate who put myself through college. I'm passionate about technology, and I'm excited to debut in the great Software Industry.<br>I spent a lot of solo hours to create this portfolio with the help of engine search, documentation and amazing communities of people willing to help strangers on the internet.
                 </p>
               </div>
             </div>
@@ -149,7 +149,7 @@
     </section>
     <section class="u-align-center u-clearfix u-palette-3-base u-section-6" id="carousel_7a8d">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-text u-text-1">More!<br>
+        <h1 class="u-text u-text-1">Find out more!<br>
         </h1>
         <p class="u-text u-text-2"></p>
         <div class="u-clearfix u-gutter-30 u-layout-wrap u-layout-wrap-1">
