--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="u-repeater u-repeater-1">
             <div class="u-container-style u-list-item u-repeater-item">
               <div class="u-container-layout u-similar-container u-container-layout-2">
-                <p class="u-text u-text-2">Hi, I'm Tiago, a recent graduate who put myself through college. I'm passionate about technology, and I'm excited to debut in the great Software Industry.<br>I spent a lot of solo hours to create this portfolio with the help of engine search, documentation and amazing communities of people willing to help strangers on the internet.
+                <p class="u-text u-text-2">Hi, I'm Tiago, a recent graduate who put myself through college. I'm passionate about technology, and I'm excited to debut in the great Software Industry.<br>I spent a lot of solo hours to create this portfolio with the help of search engines, documentation and amazing communities of people willing to help strangers on the internet.
                 </p>
               </div>
             </div>
