--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <p class="u-text u-text-palette-1-base u-text-4">
                     <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-file-link u-hover-none u-none u-text-palette-1-base u-btn-1" href="files/TiagoDiploma.pdf" target="_blank">University of Maryland Global Campus</a>
                   </p>
-                  
+<!--                  <a href="files/TiagoResume.pdf" class="u-active-palette-4-base u-btn u-btn-round u-button-style u-custom-font u-file-link u-font-raleway u-hover-palette-4-base u-palette-1-base u-radius-50 u-text-body-alt-color u-btn-2" target="_blank">RESUME</a>-->
                 </div>
               </div>
               <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-size-33 u-image-1" data-image-width="1372" data-image-height="1235">
@@ -175,9 +175,9 @@
                     <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-20 u-white u-layout-cell-3">
                         <div class="u-container-layout u-valign-top u-container-layout-3">
                             <span class="u-border-3 u-border-grey-15 u-file-icon u-icon u-icon-circle u-spacing-20 u-text-grey-75 u-icon-1"><img src="images/leetcode-3445700-2878632.png" alt=""></span>
-                            <h5 class="u-text u-text-custom-color-1 u-text-6">LeetCode:</h5>
+                            <h5 class="u-text u-text-custom-color-1 u-text-6">GitHub:</h5>
                             <p class="u-text u-text-grey-50 u-text-4 u-text-color-">
-                                <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-50 u-btn-1" href="https://www.leetcode.com/tiagofdev">tiagofdev</a>
+                                <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-50 u-btn-1" href="https://www.github.com/tiagofdev">tiagofdev</a>
                             </p>
                        </div>
                   </div>
