--- a/Home.html
+++ b/Home.html
@@ -2,8 +2,7 @@
 <html style="font-size: 16px;" lang="en-US"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Web Software Developers, Key Features, Data Visualization, IT solutions, IT solutions, Web Analytics, We are directly involved in t​he process, Get in Touch!">
-    <meta name="description" content="Recent graduate looking for a junior software developer position!">
+    <meta name="description" content="Recent graduate up for a junior software developer position!">
     <title>Home</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
@@ -102,7 +101,7 @@
             
             
           </span>
-                <h4 class="u-align-center u-text u-text-6">!</h4>
+                <h4 class="u-align-center u-text u-text-6">More to Come</h4>
               </div>
             </div>
           </div>
