--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html style="font-size: 16px;" lang="en-US"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Web Software Developers, Software Developer, Portfolio, Resume, Graduate">
-    <meta name="description" content="Recent graduate looking for a junior software developer position!">
+    <meta name="keywords" content="Web Software Developers, Software Developer, Portfolio, Graduate">
+    <meta name="description" content="Recent graduate up for a junior software developer position!">
     <title>Tiago Feitosa - Portfolio</title>
     <link rel="stylesheet" href="style.css" media="screen">
 <link rel="stylesheet" href="Home.css" media="screen">
@@ -149,7 +149,7 @@
     </section>
     <section class="u-align-center u-clearfix u-palette-3-base u-section-6" id="carousel_7a8d">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <h1 class="u-text u-text-1">Find out more!<br>
+        <h1 class="u-text u-text-1">Contacts<br>
         </h1>
         <p class="u-text u-text-2"></p>
         <div class="u-clearfix u-gutter-30 u-layout-wrap u-layout-wrap-1">
@@ -174,13 +174,22 @@
                     </div>
                     <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-20 u-white u-layout-cell-3">
                         <div class="u-container-layout u-valign-top u-container-layout-3">
-                            <span class="u-border-3 u-border-grey-15 u-file-icon u-icon u-icon-circle u-spacing-20 u-text-grey-75 u-icon-1"><img src="images/leetcode-3445700-2878632.png" alt=""></span>
+                            <span class="u-border-3 u-border-grey-15 u-file-icon u-icon u-icon-circle u-spacing-20 u-text-grey-75 u-icon-1"><img src="images/github-icon.png" alt=""></span>
                             <h5 class="u-text u-text-custom-color-1 u-text-6">GitHub:</h5>
                             <p class="u-text u-text-grey-50 u-text-4 u-text-color-">
                                 <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-50 u-btn-1" href="https://www.github.com/tiagofdev">tiagofdev</a>
                             </p>
                        </div>
                   </div>
+                    <div class="u-align-center u-container-style u-layout-cell u-right-cell u-size-20 u-white u-layout-cell-3">
+                        <div class="u-container-layout u-valign-top u-container-layout-3">
+                            <span class="u-border-3 u-border-grey-15 u-file-icon u-icon u-icon-circle u-spacing-20 u-text-grey-75 u-icon-1"><img src="images/leetcode-3445700-2878632.png" alt=""></span>
+                            <h5 class="u-text u-text-custom-color-1 u-text-6">LeetCode:</h5>
+                            <p class="u-text u-text-grey-50 u-text-4 u-text-color-">
+                                <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-50 u-btn-1" href="https://www.leetcode.com/tiagofdev">tiagofdev</a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
               </div>
             </div>
