--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <div class="u-layout-col">
               <div class="u-size-60">
                 <div class="u-layout-row">
-                    <div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-20 u-white u-layout-cell-1">
+                    <!--<div class="u-align-center u-container-style u-layout-cell u-left-cell u-size-20 u-white u-layout-cell-1">
                         <div class="u-container-layout u-valign-top u-container-layout-1">
                             <span class="u-border-3 u-border-grey-15 u-file-icon u-icon u-icon-circle u-spacing-20 u-text-grey-75 u-icon-1"><img src="images/1236849.png" alt=""></span>
                             <h5 class="u-text u-text-custom-color-1 u-text-3">LinkedIn Profile:</h5>
@@ -165,7 +165,7 @@
                                 <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-grey-50 u-btn-1" href="https://www.linkedin.com/in/tiagofdev">tiagofdev</a>
                             </p>
                         </div>
-                    </div>
+                    </div>-->
                     <div class="u-container-style u-layout-cell u-size-20 u-white u-layout-cell-2">
                         <div class="u-container-layout u-container-layout-2"><span class="u-border-3 u-border-grey-15 u-icon u-icon-circle u-spacing-20 u-text-grey-40 u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 479.058 479.058" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-4364"></use></svg><svg class="u-svg-content" viewBox="0 0 479.058 479.058" id="svg-4364"><path d="m434.146 59.882h-389.234c-24.766 0-44.912 20.146-44.912 44.912v269.47c0 24.766 20.146 44.912 44.912 44.912h389.234c24.766 0 44.912-20.146 44.912-44.912v-269.47c0-24.766-20.146-44.912-44.912-44.912zm0 29.941c2.034 0 3.969.422 5.738 1.159l-200.355 173.649-200.356-173.649c1.769-.736 3.704-1.159 5.738-1.159zm0 299.411h-389.234c-8.26 0-14.971-6.71-14.971-14.971v-251.648l199.778 173.141c2.822 2.441 6.316 3.655 9.81 3.655s6.988-1.213 9.81-3.655l199.778-173.141v251.649c-.001 8.26-6.711 14.97-14.971 14.97z"></path></svg></span>
                             <h5 class="u-align-center u-text u-text-custom-color-1 u-text-5">Email:</h5>
